--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
 # Project exclude paths
 /node_modules/
+.idea/workspace.xml
+.idea/usage.statistics.xml
+.idea/tasks.xml
+.idea/shelf
+*.iml
+
+config.json
